fix(frontpage): wrap search form in vue app

--- a/resources/scss/components/articleList.scss
+++ b/resources/scss/components/articleList.scss
@@ -206,7 +206,7 @@
         @include ipadOrSmaller{
             margin-top: 134px;
         }
-        form{
+        &-form{
             display: flex;
             align-items: center;
             justify-content: center;
